# LLM_usage

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
src/: -api_key_file.py  chat.py  chat_api.py  dataframe.py  flash_attn_issue.txt  generate.py  generate_reasoning.py  generate_reasoning2.py  generate_reasoning_continue.py  get_result_df.py  llm_api.py  process_pred.py  reason_args.py  reason_frame.py
src/IDRR_data/: __init__.py  dataframes.py  fill_prompt.py
src/cmd/: cat_log.sh  nohup_generate.sh
src/llm_zp/: __init__.py  qwen_omni.py  qwen_vl.py
src/llm_zp/vllm_zp/: __init__.py  host_model.py  host_model.sh  install.sh  openai_api.py
src/script/: cat_log.sh  dev_subtext.py  nohup_generate.sh  pred_base.py  pred_base_IICOT.py  pred_base_few.py  pred_base_fewshot.py  pred_init.py  pred_reason.py  pred_subtext.py  pred_subtext_chinese.py  pred_subtext_judge.py  run.sh  train_subtext.py
src/script/subtext/: pred_base_fewshot.py  pred_subtext.py  pred_subtext_judge.py
src/template_script/: 001-pdtb3_top_subtext.py  002-pdtb3_top_subtext.py  cat_log.sh  pred_reason.py  run.sh
src/utils/: __init__.py  attr_dic.py  file_utils.py  gpu_utils.py
src_old/: generate_reasoning.py  llm_api.py  process_pred.py
src_old/template_script/: 002-pdtb3_top_subtext.py  run.sh
